--- a/style.css
+++ b/style.css
@@ -6,18 +6,21 @@
 
 header {
   display: flex;
-  height: 14vh;
+  height: 16vh;
   justify-content: center;
   align-items: center;
   border-bottom: solid 1px #e2e2e2;
 }
 
 .box1 {
-    display: flex;
-    width: 64vw;
-    justify-content: space-between;
-    align-items: center;
-    border: 2px solid green;
+  display: flex;
+  width: 72vw;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item-mobile {
+  display: none;
 }
 
 header nav {
@@ -25,21 +28,20 @@ header nav {
   width: 14vw;
   justify-content: space-between;
   align-items: center; /* passou a altura na tag pai, portante, aqui não precisa */
-  border: 2px solid;
 }
 
 h1 {
   font-family: "Caesar Dressing", cursive;
   font-weight: 100;
-  font-size: 50px;
+  font-size: 54px;
+  text-transform: lowercase; /* lowercase - texto em caixa baixa */
 }
 
 .box2 {
-    display: flex;
-    width: 14vw;
-    flex-direction: row-reverse;
-    align-items: center;
-    border: 2px solid;
+  display: flex;
+  width: 14vw;
+  flex-direction: row-reverse;
+  align-items: center;
 }
 
 header div {
@@ -47,7 +49,6 @@ header div {
   width: 10vw;
   justify-content: space-between;
   align-items: center;
-  border: 2px solid red;
 }
 
 main {
@@ -55,7 +56,8 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 140vh;
+  height: 164vh;
+  font-family: 'Nunito', sans-serif;
 }
 
 main ul {
@@ -63,7 +65,8 @@ main ul {
   width: 32vw;
   justify-content: space-between;
   list-style: none;
-  border: 2px solid;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 main a {
@@ -72,9 +75,19 @@ main a {
 }
 
 main figure {
-    display: flex;
-    width: 64vw;
-    justify-content: space-between;
+  display: flex;
+  width: 72vw;
+  justify-content: space-between;
+}
+
+figure h3 {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+figure h2 {
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .xbox {
@@ -82,16 +95,22 @@ main figure {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 20vw;
-  height: 54vh;
+  width: 22vw;
+  height: 64vh;
   color: white;
   border-radius: 4px;
   position: relative;
 }
 
 .xbox div{
-    position: absolute;
-    bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 90%;
+  height: 20vh;
+  position: absolute;
+  bottom: 0;
+  left: 1vw;
 }
 
 .menina {
@@ -99,16 +118,22 @@ main figure {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 20vw;
-  height: 54vh;
+  width: 22vw;
+  height: 64vh;
   color: white;
   border-radius: 4px;
   position: relative;
 }
 
 .menina div{
-    position: absolute;
-    bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 90%;
+  height: 16vh;
+  position: absolute;
+  bottom: 0;
+  left: 1vw;
 }
 
 .personagens {
@@ -116,16 +141,22 @@ main figure {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 20vw;
-  height: 54vh;
+  width: 22vw;
+  height: 64vh;
   color: white;
   border-radius: 4px;
   position: relative;
 }
 
 .personagens div{
-    position: absolute;
-    bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 90%;
+  height: 16vh;
+  position: absolute;
+  bottom: 0;
+  left: 1vw;
 }
 
 .carro {
@@ -133,66 +164,166 @@ main figure {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 64vw;
-  height: 54vh;
+  width: 72vw;
+  height: 64vh;
   color: white;
   border-radius: 4px;
   position: relative;
 }
 
 .carro div{
-    position: absolute;
-    bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 90%;
+  height: 14vh;
+  position: absolute;
+  bottom: 0;
+  left: 1vw;
 }
 
 .mais {
-    display: flex;
-    width: 20vw;
-    justify-content: space-evenly;
-    align-items: center;
-    border: solid 2px pink;
+  display: flex;
+  width: 14vw;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.mais h2 {
+  font-size: 16px;
+  font-weight: 600;
 }
 
 footer {
-    display: flex;
-    height: 14vh;
-    justify-content: center;
-    align-items: center;
-    border-top: solid 1px #e2e2e2;
+  display: flex;
+  height: 12vh;
+  justify-content: center;
+  align-items: center;
+  border-top: solid 1px #e2e2e2;
+  font-family: 'Nunito', sans-serif;
 }
 
 footer section {
-    display: flex;
-    width: 64vw;
-    justify-content: space-between;
-    align-items: center;
-    border: solid 2px;
+  display: flex;
+  width: 72vw;
+  justify-content: space-between;
+  align-items: center;
 }
 
 footer div {
-    display: flex;
-    width: 8vw;
-    justify-content: space-between;
-    align-items: center;
-    border: 2px solid red;
+  display: flex;
+  width: 6vw;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer h2 {
+  font-size: 16px;
+  font-weight: 600;
 }
 
 footer ul {
-    display: flex;
-    width: 28vw;
-    justify-content: space-between;
-    border: 2px solid pink;
-    list-style: none;
+  display: flex;
+  width: 30vw;
+  justify-content: space-between;
+  list-style: none;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 footer a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 /* max-width - tamanho máximo // min-width - tamanho mínimo */
 @media (max-width: 500px) {
-  header {
-    background-color: hotpink;
+  .item-mobile {
+    display: flex;
+  }
+
+  .item-web {
+    display: none;
+  }
+
+  .box1 {
+    width: 88vw;
+  }
+
+  header nav {
+    width: 10vw;
+    justify-content: flex-start;
+  }
+
+  header div {
+    width: 10vw;
+    justify-content: flex-end;
+  }
+
+  main {
+    height: 270vh;
+  }
+
+  h1 {
+    font-size: 44px;
+  }
+    
+  main ul {
+    display: none;
+  }
+
+  main figure {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 180vh;
+  }
+
+  .xbox {
+    width: 88vw;
+    height: 56vh;
+  }
+
+  .menina {
+    width: 88vw;
+    height: 56vh;
+  }
+  
+  .personagens {
+    width: 88vw;
+    height: 56vh;
+  }
+
+  .carro {
+    width: 88vw;
+    height: 56vh;
+  }
+
+  .carro div{
+    height: 20vh;
+  }
+
+  .mais {
+    width: 44vw;
+  }
+
+  footer {
+    height: 22vh;
+  }
+
+  footer section {
+    width: 88vw;
+    justify-content: center;
+  }
+
+  footer div {
+    width: 18vw;
+  }
+
+  footer ul {
+    flex-direction: column;
+    width: 40vw;
+    height: 14vh;
+    align-items: center;
   }
 }
